--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,58 @@
-.App {
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: cursive;
+}
+body{
+  background-image: linear-gradient(to bottom, rgb(186, 220, 233) , rgb(241, 150, 166), rgb(186, 220,233));
+  
+}
+.container{
+  height: 100vh;
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+h1{
+  margin: 20px;
 }
+form{
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+  padding: 40px;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+label{
+  font-size:x-large;
+  margin-right: 20px;
+}
+input{
+  padding: 10px 20px;
+  outline: none;
+  font-size: x-large;
+  border-radius: 40px;
+  background-color: rgb(162, 212, 231) ;
+  width: 300px;
+}
+input[type="submit"]{
+  margin-top: 40px;
+  cursor: pointer;
+}
+.box{
+  max-width: 1150px;
+  margin: 100px auto;
+  border: 2px solid black;
+  background-color: rgb(162, 212, 231);
+  display: grid;
+  grid-template-columns: auto auto;
+  
+  
+}
+.box1{
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.show-data{
+  max-width: 600px;
+  padding: 25px;
+  margin: 25px;
+  border: 2px solid black;
+  background-color: rgb(248, 140, 158);
+  border-radius: 20px;
 }
